--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <a href="https://github.com/Nushcode"><img src="./images/git.png"></a>
         <a href="https://twitter.com/Anushka38314809"><img src="./images/twitter.png"></a>
         <a href="https://www.linkedin.com/in/anushka-singh-0275bb1b3/"><img src="https://pngimg.com/uploads/linkedIn/linkedIn_PNG38.png"></a>
-        <p class="Copyright"><i><u>Copyright © 2021 by Anushka Singh</u></i></p>
+        <p class="Copyright">Copyright © 2021 by Anushka Singh</p>
       </div>
     </footer>
   </body>
