Responsive About Me Section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</div>
 		</div>
 	</header>
-	<!-- <section class="about" id="about">
+	<section class="about" id="about">
 		<div class="container flex items-center">
 			<div class="flex-1">
 				<img class="about-imag" src="./images/pic.jpg">
@@ -73,7 +73,7 @@
 		</div>
 	</section>
 	
-	<section class="freelancing">
+	<!-- <section class="freelancing">
 		<h1>I Am Available For freelancing</h1>
 		<p>For any work on web Devlopment , App Development and Digital Marketing</p>
 		<a href="Anushka's Resume.pdf" download>
