Responsive Freelancing Section

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 		</div>
 	</section>
 	
-	<!-- <section class="freelancing">
+	<section class="freelancing">
 		<h1>I Am Available For freelancing</h1>
 		<p>For any work on web Devlopment , App Development and Digital Marketing</p>
 		<a href="Anushka's Resume.pdf" download>
 			<button class="btn btn-primary">Download CV</button>
 		</a>
 	</section>
-	<section class="work" id="pro">
+	<!-- <section class="work" id="pro">
 		<div class="container">
 			<h1 class="section-heading">My <span>Work</span></h1>
 			<p>These are few of the Glimps of my Projects</p>
