Responsive Work Section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<button class="btn btn-primary">Download CV</button>
 		</a>
 	</section>
-	<!-- <section class="work" id="pro">
+	<section class="work" id="pro">
 		<div class="container">
 			<h1 class="section-heading">My <span>Work</span></h1>
 			<p>These are few of the Glimps of my Projects</p>
@@ -124,7 +124,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="blog" id="hob">
+	<!-- <section class="blog" id="hob">
 		<div class="container">
 			<h1 class="section-heading">My <span> Blog</span></h1>
 			<p>Here are some of the spotlights if the areas i have intrest in and explored after having this hectic schedule of a Developer</p>
