Responsive Blog Section

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- <section class="blog" id="hob">
+	<section class="blog" id="hob">
 		<div class="container">
 			<h1 class="section-heading">My <span> Blog</span></h1>
 			<p>Here are some of the spotlights if the areas i have intrest in and explored after having this hectic schedule of a Developer</p>
@@ -171,7 +171,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="contact" id="con">
+	<!--<section class="contact" id="con">
 		<div class="container section-heading">
 			<h1>Contact <span> Us</span></h1>
 			<p>For any further information or colaboration conatct me !</p>
