Blog Section Redesign

--- a/index.html
+++ b/index.html
@@ -130,9 +130,7 @@
 			<p>Here are some of the spotlights if the areas i have intrest in and explored after having this hectic schedule of a Developer</p>
 			<div class="card-wrapper">
 				<div class="card">
-					<div class="img-wrapper">
-						<img src="./images/article-ph-1.png">
-					</div>
+					<img src="./images/article-ph-1.png">
 					<div class="card-content">
 						<a href="#">
 							<h1>Tittle</h1>
@@ -143,9 +141,7 @@
 					</div>
 				</div>
 				<div class="card">
-					<div class="img-wrapper">
-						<img src="./images/article-ph-1.png">
-					</div>
+					<img src="./images/article-ph-1.png">
 					<div class="card-content">
 						<a href="#">
 							<h1>Tittle</h1>
@@ -156,9 +152,7 @@
 					</div>
 				</div>
 				<div class="card">
-					<div class="img-wrapper">
-						<img src="./images/article-ph-1.png">
-					</div>
+					<img src="./images/article-ph-1.png">
 					<div class="card-content">
 						<a href="#">
 							<h1>Tittle</h1>
@@ -171,7 +165,7 @@
 			</div>
 		</div>
 	</section>
-	<!--<section class="contact" id="con">
+	<!-- <section class="contact" id="con">
 		<div class="container section-heading">
 			<h1>Contact <span> Us</span></h1>
 			<p>For any further information or colaboration conatct me !</p>
@@ -202,8 +196,8 @@
 				</div>
 			</form>
 		</div>
-	</section>
-	<footer>
+	</section> -->
+	<!-- <footer>
 		<img class="footer-logo" src="./images/logo-2.svg">
 		<div class="footer-socials">
 			<a href="https://www.instagram.com/being.__.__.human/"><img src="./images/instagram.png"></a>
