Responsive contact section

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- <section class="contact" id="con">
+	<section class="contact" id="con">
 		<div class="container section-heading">
 			<h1>Contact <span> Us</span></h1>
 			<p>For any further information or colaboration conatct me !</p>
@@ -196,7 +196,7 @@
 				</div>
 			</form>
 		</div>
-	</section> -->
+	</section>
 	<!-- <footer>
 		<img class="footer-logo" src="./images/logo-2.svg">
 		<div class="footer-socials">
