--- a/index.html
+++ b/index.html
@@ -197,17 +197,17 @@
 			</form>
 		</div>
 	</section>
-	<!-- <footer>
+	<footer>
 		<img class="footer-logo" src="./images/logo-2.svg">
 		<div class="footer-socials">
 			<a href="https://www.instagram.com/being.__.__.human/"><img src="./images/instagram.png"></a>
 			<a href="https://www.facebook.com/anushka.chauhan.9404362/"><img src="./images/facebook.png"></a>
 			<a href="https://github.com/Nushcode"><img src="./images/git.png"></a>
 			<a href="https://twitter.com/Anushka38314809"><img src="./images/twitter.png"></a>
-			<a href="https://www.linkedin.com/in/anushka-singh-0275bb1b3/"><img src="https://pngimg.com/uploads/linkedIn/linkedIn_PNG38.png"></a>
+			<a href="https://www.linkedin.com/in/anushka-singh-0275bb1b3/"><img src="https://pngimg.com/uploads/linkedIn/linkedIn_PNG38.png" class="ln"></a>
 			<p class="Copyright">Copyright © 2021 by Anushka Singh</p>
 		</div>
-	</footer> -->
+	</footer>
 </body>
 
 </html>
